[package]
name = "axum-tonic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4"
axum-server = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
prost = "0.9"
tokio = { version = "1", features = ["full"] }
tonic = "0.6"
tower = { version = "0.4", features = ["make", "steer"] }

[build-dependencies]
tonic-build = "0.5"
